[package]
name = "api_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros"] }
tokio = { version = "1.45", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
limbo = "0.0.19"
tower-http = { version = "0.6.4", features = ["cors"] }
anyhow = "1.0"
chrono = "0.4.41"
